--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="hero">
 
-        <video autoplay loop muted plays-inline class="video">
+        <video autoplay loop muted plays-inline class="video">   //This line is for the video background in the hero section of the webpage..
             <source src="california.mp4" type="video/mp4">
         </video>
 
@@ -22,7 +22,7 @@
                 <li><a href="#">UBER</a></li>
             </ul>
         </nav>
-<h1></h1>
+<h1></h1>ad
 
 
 
